--- a/index.html
+++ b/index.html
@@ -5,6 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/menu.css">
   </head>
-  <body></body>
+  <body>
+    <script src="js/menu.js"></script>
+    <header class="header">
+  <div class="header_inner">
+    <div class="logo">
+    <h1 class="title">ハンバーガーメニュー</h1>
+    </div>
+    <nav class="nav">
+      <ul class="nav_list">
+        <li class="nav_item"><a href="#">メニュー1</a></li>
+        <li class="nav_item"><a href="#">メニュー2</a></li>
+        <li class="nav_item"><a href="#">メニュー3</a></li>
+        <li class="nav_item"><a href="#">メニュー4</a></li>
+        <li class="nav_item"><a href="#">メニュー5</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="hamburger" id="js-hamburger">
+    <span class="hamburger_border hamburger_border_top"></span>
+    <span class="hamburger_border hamburger_border_center"></span>
+    <span class="hamburger_border hamburger_border_bottom"></span>
+  </div>
+  <div class="black_bg" id="js-black-bg"></div>
+</header>
+</body>
 </html>
