--- a/index.html
+++ b/index.html
@@ -11,27 +11,38 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
-    <header class="header">
-  <div class="header_inner">
-    <div class="logo">
-    <h1 class="title">ハンバーガーメニュー</h1>
+  <!-- レスポンシブ込みの追従ヘッダー -->
+  <header class="header">
+    <div class="header-container">
+
+      <h1 class="header-logo">
+        <a href="#" id="logo" class="logo-link">
+          <img src="https://plot-hub.com/code_example/lib/img/logo.jpg" alt="">
+        </a>
+      </h1>
+
+      <nav id="hb-menu" class="nav-menu">
+        <ul class="menu-list">
+          <li class="menu-item"><a href="#" class="menu-link">MENU1</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">MENU2</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">MENU3</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">MENU4</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">MENU5</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">MENU6</a></li>
+        </ul>
+      </nav>
+
+      <!-- ハンバーガーメニュー ボタン -->
+      <button id="openbtn" class="hamburger-button">
+        <div class="hamburger-lines">
+          <span class="line"></span>
+          <span class="line"></span>
+        </div>
+      </button>
+      <!-- ハンバーガーメニュー ボタン ここまで -->
+
     </div>
-    <nav class="nav">
-      <ul class="nav_list">
-        <li class="nav_item"><a href="#">メニュー1</a></li>
-        <li class="nav_item"><a href="#">メニュー2</a></li>
-        <li class="nav_item"><a href="#">メニュー3</a></li>
-        <li class="nav_item"><a href="#">メニュー4</a></li>
-        <li class="nav_item"><a href="#">メニュー5</a></li>
-      </ul>
-    </nav>
-  </div>
-  <div class="hamburger" id="js-hamburger">
-    <span class="hamburger_border hamburger_border_top"></span>
-    <span class="hamburger_border hamburger_border_center"></span>
-    <span class="hamburger_border hamburger_border_bottom"></span>
-  </div>
-  <div class="black_bg" id="js-black-bg"></div>
-</header>
+  </header>
+  <!-- レスポンシブ込みの追従ヘッダー ここまで -->
 </body>
 </html>
