--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
     </div>
   </header>
   <!-- レスポンシブ込みの追従ヘッダー ここまで -->
+  <h2>6/21(土) 6/22(日)</h2>
+  <h3>フロアマップ</h3>
+  <h3>各団体ホームページ</h3>
+  <h3>タイムテーブル</h3>
+  <h3>来場時の注意</h3>
+  <h3>アクセス</h3>
 </body>
 </html>
