--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </header>
   <!-- レスポンシブ込みの追従ヘッダー ここまで -->
-  <h1>6/<span class="satcol">21</span>(土) 6/22(日)</h1>
+  <h1>6/20(金)、<span class="satcol">6/21(土)</span>、<span class="satcol">6/22(日)</span></h1>
   <h2>フロアマップ</h2>
   <h2>各団体ホームページ</h2>
   <h2>タイムテーブル</h2>
