--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     </div>
   </header>
   <!-- レスポンシブ込みの追従ヘッダー ここまで -->
-  <h1>6/20(金)、<span class="satcol">6/21(土)</span>、<span class="suncol">6/22(日)</span></h1>
+  <h1><span class="satcol">6/21(土)</span>、<span class="suncol">6/22(日)</span></h1>
+  <p>※6/21は午後のみ保護者公開、6/22は一般公開です。</p>
   <h2>フロアマップ</h2>
   <h2>各団体ホームページ</h2>
   <h2>タイムテーブル</h2>
