--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <h2>来場時の注意</h2>
   <h2>アクセス</h2>
   <div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3253.220252289754!2d139.9330105!3d35.3749929!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60180ca639d5fa99%3A0xee91501d3fb5dbed!2z5Y2D6JGJ55yM56uL5pyo5pu05rSl6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1749961472636!5m2!1sja!2sjp“ width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3253.220252289754!2d139.9330105!3d35.3749929!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60180ca639d5fa99%3A0xee91501d3fb5dbed!2z5Y2D6JGJ55yM56uL5pyo5pu05rSl6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1749961472636!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </body>
 </html>
