--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -213,24 +213,32 @@
     <section id="characters" data-aos="fade-up" class="slide-up">
       <h2 class="slide-up">登場人物</h2>
       <div class="character slide-up" data-aos="fade-up" data-aos-delay="100">
-        <img src="https://via.placeholder.com/100x150" alt="和也">
+        <img src="https://via.placeholder.com/100x150" alt="アキラ">
         <div>
-          <strong>和也（CV: 山田 太郎）</strong><br>
-          異世界に転移した元社畜。剣の才能が覚醒していく。
+          <strong>アキラ</strong><br>
+          ほげほげぷれーすほるだー
         </div>
       </div>
       <div class="character slide-up" data-aos="fade-up" data-aos-delay="200">
-        <img src="https://via.placeholder.com/100x150" alt="リリア">
+        <img src="https://via.placeholder.com/100x150" alt="ローゼ">
         <div>
-          <strong>リリア（CV: 鈴木 花子）</strong><br>
-          謎多き巫女。和也の運命を導く少女。
+          <strong>ローゼ</strong><br>
+          ふーばーぷれーすほるだー
         </div>
       </div>
       <div class="character slide-up" data-aos="fade-up" data-aos-delay="300">
-        <img src="https://via.placeholder.com/100x150" alt="ガルド">
+        <img src="https://via.placeholder.com/100x150" alt="魔王">
         <div>
-          <strong>ガルド（CV: 佐藤 一郎）</strong><br>
-          元騎士団長。和也に厳しくも温かい指導を行う。
+          <strong>魔王</strong><br>
+          ぴよぴよぷれーすほるだー
+        </div>
+      </div>
+      </div>
+      <div class="character slide-up" data-aos="fade-up" data-aos-delay="300">
+        <img src="https://via.placeholder.com/100x150" alt="神">
+        <div>
+          <strong>神</strong><br>
+          ふがふがぷれーすほるだー
         </div>
       </div>
     </section>
