--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -245,8 +245,8 @@
     <h1 class="site-logo slide-up" data-aos="fade-up">
       <!-- ロゴ画像を挿入。srcやsrcsetは実際のファイル名に合わせて変更 -->
       <img 
-        src="images/images.png" 
-        srcset="images/images.png" 
+        src="images/image.png" 
+        srcset="images/image.png" 
         alt="異世界転生演劇 〜君の剣が導く運命〜" 
         class="title-logo"
         width="600"
