--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -56,9 +56,7 @@
       height: auto;
       display: block;
       margin: 0 auto;
-      animation: logo-float 3s ease-in-out infinite;
-      /* 必要ならドロップシャドウなど */
-      /* filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3)); */
+　　　 filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
     }
     @media (max-width: 600px) {
       .title-logo {
